feat(api): add members info to getBookDetail api
