# apps/api/docs/swagger.json
@@ -315,7 +315,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.BookModel"
+                                            "$ref": "#/definitions/models.BookDetail"
                                         }
                                     }
                                 }
@@ -674,6 +674,46 @@
         }
     },
     "definitions": {
+        "models.BookDetail": {
+            "type": "object",
+            "properties": {
+                "book_description": {
+                    "type": "string"
+                },
+                "book_name": {
+                    "type": "string"
+                },
+                "create_at": {
+                    "type": "string"
+                },
+                "creator_id": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "last_modified_at": {
+                    "type": "string"
+                },
+                "members": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.BookMember"
+                    }
+                }
+            }
+        },
+        "models.BookMember": {
+            "type": "object",
+            "properties": {
+                "user_id": {
+                    "type": "string"
+                },
+                "user_name": {
+                    "type": "string"
+                }
+            }
+        },
         "models.BookModel": {
             "type": "object",
             "properties": {
